libs/preprocessor/tests/errors/pe26_unsupported_builtin/source.hpp
class Date {
    day = __DAY__;
};
